fix(karaoke): Pagination layout on mobile

--- a/frontend/src/assets/css/index.scss
+++ b/frontend/src/assets/css/index.scss
@@ -98,4 +98,17 @@ body {
     .SongEditorForm {
         flex-direction: column;
     }
+
+    .SongListing__pagination {
+        flex-direction: column;
+        gap: .5em;
+    }
+}
+
+.EventEditor__Participant {
+    width: 200px;
+
+    .ant-card-body {
+        padding: .25em 1em;
+    }
 }
